classDiagram
    %% ── 网格布局类型 ──
    class GridBreakpoint {
        <<enumeration>>
        sm
        md
        lg
        xl
    }

    class GridConfig {
        +GridBreakpoint breakpoint
        +number itemW
        +number itemH
        +number gap
        +number searchW
        +number searchH
        +number topRows
        +number bottomRows
        +number sideCols
        +number maxColsPerRow
    }

    class GridSlot {
        +string toolId
        +string categoryId
        +number zone
        +number row
        +number col
        +number cx
        +number cy
    }

    class ZoneAssignment {
        +ToolRecord[] top
        +ToolRecord[] bottom
        +ToolRecord[] left
        +ToolRecord[] right
        +string[] pinnedTop
    }

    class GridLayout {
        +GridConfig config
        +number stageW
        +number stageH
        +GridSlot[] slots
        +Record~string, GridSlot~ slotById
        +ZoneAssignment zones
    }

    class GridTransform {
        +number dx
        +number dy
        +number scale
        +number opacity
        +number z
        +GridItemState state
    }

    class GridItemState {
        <<enumeration>>
        idle
        matched
        hovered
        pushed
        dimmed
    }

    class GridInteractionConfig {
        +boolean enabled
        +number pushRadius
        +number pushStrength
        +number maxPushX
        +number maxPushY
        +number matchedScale
        +number hoverScale
        +number dimmedScale
        +number dimmedOpacity
    }

    class GridInteractionResult {
        +Set~string~ highlightIds
        +Record~string, GridTransform~ transforms
        +string hoveredId
        +number matchCount
        +boolean isSearching
    }

    %% ── 关系 ──
    GridLayout --> GridConfig
    GridLayout --> GridSlot
    GridLayout --> ZoneAssignment
    GridTransform --> GridItemState
    GridInteractionResult --> GridTransform

    %% ── 组件 Props ──
    class GridHomeProps {
        +ToolRecord[] tools
        +string searchQuery
        +(value: string) => void onSearchChange
        +() => void onSearchFocus
        +RefObject~HTMLInputElement~ searchInputRef
    }

    class GridZoneProps {
        +ToolRecord[] tools
        +string zone
        +GridSlot[] slots
        +Record~string, GridTransform~ transforms
        +string hoveredId
        +(id: string | null) => void onHover
        +(tool: ToolRecord) => void onActivate
    }

    class GridItemProps {
        +ToolRecord tool
        +GridSlot slot
        +GridTransform transform
        +boolean isHovered
        +boolean hasActiveNeighbor
        +() => void onHover
        +() => void onLeave
        +() => void onActivate
    }
